# can_monitor

./: .gitignore  Cargo.toml  build_docker.sh  can_ids.json  can_parser_types.h  cross_build.sh  flowchart_and_pruning.txt  imgui.ini  mock_sender.py  package-lock.json  package.json  run_sim_gui.sh  vite.config.ts
docker/armv7-unknown-linux-gnueabihf/: Dockerfile
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  boat_data.ts  main.ts  measurement_cards.ts  measurement_types.ts
frontend/src/components/: AppHeader.vue  MeasurementsDashboard.vue  MetricDisplay.vue  MultiMetricCard.vue  MultiStateCard.vue  Speedometer.vue  StateDisplay.vue  StateDisplayMam.vue  SteeringCard.vue  SwitchCard.vue  unused-MetricDisplay.vue
frontend/src/types/: index.ts
service/: build_and_install_can_monitor_service.sh  build_and_install_candump_sercvice.sh  can_monitor_service.sh  candump_service.sh
src/: App.vue  README.md  backend.rs  boat_data.rs  boat_data_types.rs  boat_data_types_old.rs  boat_state.rs  can.rs  can_types.rs  cli.rs  frontend.rs  gui.rs  logger.rs  main.rs  main.ts  measurement_types.ts  server.rs  websocket.rs
src/components/: GenericCard.vue  Greet.vue  MeasurementCard.vue  MeasurementsDashboard.vue
src/plugins/: vuetify.ts
tauri-src/: Cargo.toml  README.md  can_ids.h  can_ids.json  tauri.conf.json
tauri-src/src/: backend.rs  boat_data_types.rs  boat_state.rs  can_types.rs  cli.rs  frontend.rs  main.rs
