[package]
name = "can_parser_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-socketcan = "0.3"
tracing = { version = "0.1", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-appender = "0.2"
bitfield = "0.14"