[package]
name = "can_parser_rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-socketcan = "0.3"
tokio-tungstenite = "0.20"
async-std = "1.12"
futures-util = "0.3"
futures = "0.3"
flume = "0.10"
tracing = { version = "0.1", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-appender = "0.2"
tracing-actix-web = "0.7"
modular-bitfield = "0.11"
url = { version = "2.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1"
bincode = "1.3"
chrono = "0.4"
lazy_static = "1.4.0"

# Web Server
paperclip = { version = "0.8", features = ["paperclip-actix", "actix4",  "swagger-ui", "url"] }
include_dir = "0.7"
actix-cors = "0.6"
actix-files = "0.6"
actix-web = "4.3"
actix-web-validator = "5.0"
actix-service = "2.0"
actix-extensible-rate-limit = "0.2"