[package]
name = "can_parser_rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
# GENERAL
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

# CLI
clap = { version = "4", features = ["derive"] }

# DATA
modular-bitfield = "0.11"

# CAN
bincode = "1.3"
tokio-socketcan = "0.3"
futures-util = "0.3"

# LOG
tracing = { version = "0.1", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-appender = "0.2"
chrono = "0.4"

# GUI
imgui = "0.1.0"
imgui-glfw-rs = "0.4"
gl = "0.14.0"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = ["dpkg --add-architecture armhf && apt-get update && apt-get install --assume-yes --no-install-recommends libsdl2-dev:armhf"]