[package]
name = "can_parser_rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-socketcan = "0.3"
futures-util = "0.3"
tracing = { version = "0.1", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-appender = "0.2"
modular-bitfield = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sysfs_gpio = "0.6"
chrono = "0.4"
lazy_static = "1.4.0"
gloo = "0.8"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
tauri = { version = "1.4", features = ["shell-open"] }
serde_with = "3.0.0"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
